# ocifs

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  Makefile  README-development.rst  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  test-requirements.txt
.github/workflows/: ocifs-test.yml  publish-to-pypi.yml  publish-to-readthedocs.yml  run-unit-tests.yml
.github/workflows/set-dummy-conf/: action.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  faqs.rst  faqs_title.rst  getting-connected.ipynb  getting-started.ipynb  index.rst  modules.rst  ocifs.rst  release_notes.rst  telemetry.rst  unix-operations.ipynb
ocifs/: .version.json  __init__.py  core.py  errors.py  lake_sharing_object_storage_client.py  lakehouse.py  lakehouse_client.py  mount_specification.py  par_response.py  utils.py
ocifs/data_lake/: __init__.py  lake_mount.py  lake_sharing_client.py  lake_sharing_object_storage_client.py  lakehouse.py  lakehouse_client.py  managed_prefix_collection.py  managed_prefix_summary.py  mount_specification.py  par_response.py  rename_object_details.py
ocifs/tests/: __init__.py  test_integration.py  test_integration_lake.py  test_spec.py  test_spec_lake.py
